fixed issue with white margin appearing on mobiles

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -3,6 +3,14 @@
  * Code licensed under the Apache License v2.0.
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 
 body {
     overflow-x: hidden;
